Add bulk condition mutation support
